--- a/Tela Financiamento.html
+++ b/Tela Financiamento.html
@@ -18,28 +18,27 @@
     <br />
     <h1 style="margin-left: 5px" >Financiamento</h1>
     <label style="margin-left:5px" for="txtNome">Nome</label>
-    <input type="text" id="txtNome" name="txtNome" required /><br />
+    <input style="margin-left: 5px" type="text" id="txtNome" name="txtNome" required /><br />
     <label style="margin-left:5px" for="txtCpf">CPF</label>
-    <input type="text" id="txtCpf" name="txtCpf" required /><br />
+    <input style="margin-left: 5px" type="text" id="txtCpf" name="txtCpf" required /><br />
     <label style="margin-left:5px" for="txtEmail">E-mail</label>
-    <input type="email" id="txtEmail" name="txtEmail" required /><br />
-    <label style="margin-left:5px" for="dateNascimento">Data de Nascimento</label>
-    <input type="date" id="dateNascimento" name="dateNascimento" required />
+    <input style="margin-left: 5px" type="email" id="txtEmail" name="txtEmail" required /><br />
+    <label style="margin-left:5px" for="dateNascimento">Data de nascimento</label>
+    <input style="margin-left: 5px" type="date" id="dateNascimento" name="dateNascimento" required />
     <br />
     <label style="margin-left:5px" for="txtTelefone">Telefone</label>
-    <input style="border: 2px solid #ccc;background-color: white;width: 60%;padding: 8px 20px;margin: 8px 0;box-sizing: border-box"
+    <input style="border: 2px solid #ccc;background-color: white;width: 60%;padding: 8px 20px;margin-left: 5px;box-sizing: border-box"
            type="tel" id="txtTelefone" name="txtTelefone" required />
-    <label style="margin-left:5px" for="txtFinanciamento">Valor do Financiamento</label>
-    <input type="text" id="txtFinanciamento" name="txtFinanciamento" required /><br />
+    <label style="margin-left:5px" for="txtFinanciamento">Valor do financiamento</label>
+    <input style="margin-left: 5px" type="text" id="txtFinanciamento" name="txtFinanciamento" required /><br />
     <label style="margin-left:5px" for="txtParcelas">Parcelas</label>
-    <input type="text" id="txtParcelas" name="txtParcelas" required /><br />
-    <!--Analisar se será retirados essas duas funçoes abaixo  -->
-    <label style="margin-left:5px" for="dateInicial">Data Inicial</label>
-    <input type="date" id="dateInicial" name="dateInicial" required /><br />
-    <label style="margin-left:5px" for="dateFinal">Data Final</label>
-    <input type="date" id="dateFinal" name="dateFinal" required /><br />
+    <input style="margin-left: 5px" type="text" id="txtParcelas" name="txtParcelas" required /><br />
+    <label style="margin-left:5px" for="dateInicial">Data inicial</label>
+    <input style="margin-left: 5px" type="date" id="dateInicial" name="dateInicial" required /><br />
+    <label style="margin-left:5px" for="dateFinal">Data final</label>
+    <input style="margin-left: 5px" type="date" id="dateFinal" name="dateFinal" required /><br />
     <label style="margin-left:5px" for="txtMoeda">Moeda</label>
-    <select style="border: 2px solid #ccc;background-color: white;width: 20%; margin-left:5px; padding: 8px 20px;margin: 8px 0;box-sizing: border-box"
+    <select style="border: 2px solid #ccc;background-color: white;width: 20%; margin-left:5px; padding: 8px 20px;box-sizing: border-box"
             id="txtMoeda" name="txtMoeda">
         <option value="txtMoeda">Real</option>
         <option value="txtMoeda">Dólar</option>
@@ -48,16 +47,16 @@
     </select>
     <br />
     <label style="margin-left:5px" for="txtJuros">  Juros</label>
-    <input type="text" id="txtJuros" name="txtJuros" required /><br />
-    <label style="margin-left:5px" for="txtValorTotal">  Valor da Parcela</label>
-    <input type="text" id="txtValorTotal" name="txtValorTotal" required /><br />
+    <input style="margin-left: 5px" type="text" id="txtJuros" name="txtJuros" required /><br />
+    <label style="margin-left:5px" for="txtValorTotal">  Valor da parcela</label>
+    <input style="margin-left: 5px" type="text" id="txtValorTotal" name="txtValorTotal" required /><br />
 
-    <label style="margin-left:5px" for="txtValorParcela">  Valor Total</label>
-    <input type="text" id="txtValorParcela" name="txtValorParcela" required /><br />
+    <label style="margin-left:5px" for="txtValorParcela">  Valor total</label>
+    <input style="margin-left: 5px" type="text" id="txtValorParcela" name="txtValorParcela" required /><br />
     <label style="margin-left:5px" for="dateVencimento">Vencimento</label>
-    <input type="date" id="dateVencimento" name="dateVencimento" required /><br />
+    <input style="margin-left: 5px" type="date" id="dateVencimento" name="dateVencimento" required /><br />
     <br /><br />
-    <button style="width: 200px" class="button" type="submit">Voltar</button>
-    <button style="width: 200px" class="button" type="submit">Solicitar</button>
+    <button style="width: 200px; margin-left: 20px" class="button" type="submit">Voltar</button>
+    <button style="width: 200px; margin-left: 20px" class="button" type="submit">Solicitar</button>
 </body>
 </html>
