--- a/Tela de simulação.html
+++ b/Tela de simulação.html
@@ -19,21 +19,20 @@
     <h1 style="margin-left: 5px">Simulação de Financiamento</h1>
 
     <label style="margin-left: 5px" >Digite sua renda mensal</label>
-    <input type="text" id="txtRenda" name="txtRenda" required /><br />
+    <input style="margin-left: 5px" type="text" id="txtRenda" name="txtRenda" required /><br />
     <label style="margin-left: 5px" >Digite o valor do financiamento</label>
-    <input type="text" id="txtVFinanciamento" name="txtVFinanciamento" required />
-
+    <input style="margin-left: 5px" type="text" id="txtVFinanciamento" name="txtVFinanciamento" required />
     <label style="margin-left: 5px" >Digite o número de parcelas que deseja realizar o financiamento</label>
-    <input type="text" id="txtParcelas" name="txtParcelas" required /><br />
+    <input style="margin-left: 5px" type="text" id="txtParcelas" name="txtParcelas" required /><br />
 
-    <button class="button" style="width: 200px; margin: 30px" type="submit">Simular</button>
+    <button class="button" style="width: 200px; margin: 20px" type="submit">Simular</button>
 
     <br />
     <br />
-    <textarea>Texto simulando o financiamento... </textarea><br />
+    <textarea style="margin-left: 5px" >Texto simulando o financiamento... </textarea><br />
                                                             <br />
-    <button class="button" style="width: 250px" type="submit">Voltar</button>
-    <a href="Tela Financiamento.html" class="button" style="width: 250px; font-size: 17px " type="submit">Efetuar Financiamento</a>
+    <a href="Tela do Usuário.html" class="button" style="width: 250px; margin-left: 20px" type="submit">Voltar</a>
+    <a href="Tela Financiamento.html" class="button" style="width: 250px;margin-left: 20px; font-size: 17px " type="submit">Efetuar Financiamento</a>
 
 </body>
 </html>
