Finalizando, faltando apenas alguns toques finais

--- a/Tela 2 metodo login.html
+++ b/Tela 2 metodo login.html
@@ -8,14 +8,15 @@
 <body>
 
     <div class="menu">
-        <a href="#">Home</a>
+        <a href="Tela do Usuário.html">Home</a>
+        <a href="Tela de simulação.html">Simulação</a>
+        <a href="Tela Financiamento.html">Financiamento</a>
         <a href="Tela acompanhamento.html">Acompanhamento</a>
-        <a href="#">Financiamento</a>
-        <a href="#">Simulação</a>
-        <a href="#">Ajuda</a>
+        <a href="Tela direcionada a função do boleto.html">Boleto</a>
+        <a href="Tela de ajuda.html">Ajuda</a>
     </div>
 
-    <h2 style="margin-left:5px" >Necessitamos de algumas informações pessoais para realizar o seu acesso.</h2>
+    <h2 style="margin-left:5px">Necessitamos de algumas informações pessoais para realizar o seu acesso.</h2>
     <br />
     <form name="verificacao" action="#" method="get">
         <label style="margin-left:5px" for="txtEmail">E-mail </label>
