--- a/Tela Financiamento.html
+++ b/Tela Financiamento.html
@@ -12,11 +12,12 @@
         <a href="Tela de simulação.html">Simulação</a>
         <a href="Tela Financiamento.html">Financiamento</a>
         <a href="Tela acompanhamento.html">Acompanhamento</a>
+        <a href="Tela direcionada a função do boleto.html">Boleto</a>
         <a href="Tela de ajuda.html">Ajuda</a>
     </div>
 
     <br />
-    <h1 style="margin-left: 5px" >Financiamento</h1>
+    <h1 style="margin-left: 5px">Financiamento</h1>
     <label style="margin-left:5px" for="txtNome">Nome</label>
     <input style="margin-left: 5px" type="text" id="txtNome" name="txtNome" required /><br />
     <label style="margin-left:5px" for="txtCpf">CPF</label>
