--- a/Tela acompanhamento.html
+++ b/Tela acompanhamento.html
@@ -12,6 +12,7 @@
         <a href="Tela de simulação.html">Simulação</a>
         <a href="Tela Financiamento.html">Financiamento</a>
         <a href="Tela acompanhamento.html">Acompanhamento</a>
+        <a href="Tela direcionada a função do boleto.html">Boleto</a>
         <a href="Tela de ajuda.html">Ajuda</a>
     </div>
 
@@ -58,7 +59,7 @@
     <label style="margin-left:5px" for="dateVencimento">Vencimento</label>
     <input style="margin-left:5px" type="date" id="dateVencimento" name="dateVencimento" required /><br />
     <br /><br />
-          <p>Status Financiamento</p>
+    <p>Status Financiamento</p>
     <br />
     <button style="width: 200px; margin-left: 20px" class="button" type="submit">Voltar</button>
 
