--- a/Tela de ajuda.html
+++ b/Tela de ajuda.html
@@ -13,6 +13,7 @@
         <a href="Tela de simulação.html">Simulação</a>
         <a href="Tela Financiamento.html">Financiamento</a>
         <a href="Tela acompanhamento.html">Acompanhamento</a>
+        <a href="Tela direcionada a função do boleto.html">Boleto</a>
         <a href="Tela de ajuda.html">Ajuda</a>
     </div>
 
@@ -27,12 +28,14 @@
     <a href="#" class="button" name="Desativar Conta" style="width:200px;margin-left: 20px">Desativar Conta</a>
 
     <div class="p">
-        <p style="margin-left:1px;color: black" >E-mail para dúvidas ou problemas.<br />
-        DPfinaciamentos@hotmail.com
+        <p style="margin-left:1px;color: black">
+            E-mail para dúvidas ou problemas.<br />
+            DPfinaciamentos@hotmail.com
     </div>
 
     <div class="p">
-        <p style=" margin-left: 1px;color: black">Telefones para contato<br />
+        <p style=" margin-left: 1px;color: black">
+            Telefones para contato<br />
             (11)4002-8922<br />
             (11)4002-8923
         </p>
