--- a/Tela de quitar financiamento.html
+++ b/Tela de quitar financiamento.html
@@ -8,11 +8,12 @@
 <body>
 
     <div class="menu">
-        <a href="#">Home</a>
+        <a href="Tela do Usuário.html">Home</a>
+        <a href="Tela de simulação.html">Simulação</a>
+        <a href="Tela Financiamento.html">Financiamento</a>
         <a href="Tela acompanhamento.html">Acompanhamento</a>
-        <a href="#">Financiamento</a>
-        <a href="#">Simulação</a>
-        <a href="#">Ajuda</a>
+        <a href="Tela direcionada a função do boleto.html">Boleto</a>
+        <a href="Tela de ajuda.html">Ajuda</a>
     </div>
 
     <h1 style="margin-left: 5px">Quitar Financiamento</h1>
