--- a/Tela direcionada a função do boleto.html
+++ b/Tela direcionada a função do boleto.html
@@ -13,16 +13,20 @@
         <a href="Tela de simulação.html">Simulação</a>
         <a href="Tela Financiamento.html">Financiamento</a>
         <a href="Tela acompanhamento.html">Acompanhamento</a>
+        <a href="Tela direcionada a função do boleto.html">Boleto</a>
         <a href="Tela de ajuda.html">Ajuda</a>
     </div>
 
-    <h1 style="margin-left: 5px">Boleto</h1>
+    <h1 style="margin-left: 10px">Boleto</h1>
 
-            <a href="#">Mensalidade</a>
-            <a href="#">Antecipar Boleto</a>
-            <a href="#">Renegociação</a>
-            <a href="#">Quitarfinanciamento</a>
-    
+    <ul>
+        <li><br /></li>
+        <li><br /></li>
+        <li><a href="Tela de boleto.html" style="color: white" >Mensalidade</a></li>
+        <li><a href="Tela antecipar boleto.html" style="color: white" >Antecipar Boleto</a></li>
+        <li><a href="Tela renegociação de boleto.html" style="color: white" >Renegociação</a></li>
+        <li><a href="Tela de quitar financiamento.html" style="color: white" >Quitar financiamento</a></li>
+    </ul>
 
     <br>
     <br>
