--- a/Tela menu inicial.html
+++ b/Tela menu inicial.html
@@ -152,9 +152,11 @@
                 </div>
             </div>
             <div class="column">
-                <a href="Tela menu inicial.html" class="button2" style="vertical-align:middle"><span>Home</span></a><br />
-                <a href="Tela de login.html" class="button2" style="vertical-align:middle"><span>Login</span></a><br />
-                <a href="Tela de cadastro.html" class="button2" style="vertical-align:middle" ><span>Cadastre-se</span></a>
+                <ul style="background-color: black; width: 400px; color:white; text-align: center; height: 0px" >
+                    <li  ><a href="Tela menu inicial.html">Home</a></li>
+                    <li><a href="Tela de login.html">Login</a></li>    
+                    <li><a href="Tela de cadastro.html">Cadastre-se</a></li>
+                </ul>
             </div>
 
             <div class="column">
@@ -169,6 +171,7 @@
         </div>
         <br />
         <br />
+        <br /><br />
     </div>
 
 
