--- a/Tela do Usuário.html
+++ b/Tela do Usuário.html
@@ -14,6 +14,7 @@
         <a href="Tela de simulação.html">Simulação</a>
         <a href="Tela Financiamento.html">Financiamento</a>
         <a href="Tela acompanhamento.html">Acompanhamento</a>
+        <a href="Tela direcionada a função do boleto.html">Boleto</a>
         <a href="Tela de ajuda.html">Ajuda</a>
     </div>
 
