--- a/Tela renegociação de boleto.html
+++ b/Tela renegociação de boleto.html
@@ -9,11 +9,12 @@
 <body>
 
     <div class="menu">
-        <a href="#">Home</a>
+        <a href="Tela do Usuário.html">Home</a>
+        <a href="Tela de simulação.html">Simulação</a>
+        <a href="Tela Financiamento.html">Financiamento</a>
         <a href="Tela acompanhamento.html">Acompanhamento</a>
-        <a href="#">Financiamento</a>
-        <a href="#">Simulação</a>
-        <a href="#">Ajuda</a>
+        <a href="Tela direcionada a função do boleto.html">Boleto</a>
+        <a href="Tela de ajuda.html">Ajuda</a>
     </div>
 
     <h1 style="margin-left: 5px">Renegociar Boleto</h1>
@@ -27,7 +28,7 @@
     <button style="width: 150px; margin-left:20px" class="button" type="submit">Gerar boleto</button>
     <br />
     <br />
-    <textarea style="margin-left: 5px; width: 45%; height:300px" >Boleto..</textarea><br />
+    <textarea style="margin-left: 5px; width: 45%; height:300px">Boleto..</textarea><br />
     <a href="Tela direcionada a função do boleto.html" style="width: 150px;margin-left:20px" class="button" type="submit">Voltar</a>
     <button style="width: 150px;margin-left:20px" class="button" type="submit">Imprimir boleto</button>
 
